eks_deploy/igw.tf
/*resource "aws_internet_gateway" "axway-igw" {
  vpc_id = data.aws_vpc.vpc_devops.id

  tags = {
    Name = "axway-igw"
  }
}*/
