eks_deploy/vpc.tf
/*resource "aws_vpc" "main" {
 cidr_block = "${var.cidr_block}"

tags = {
    "kubernetes.io/cluster/${var.cluster_name}" = "shared",
     name = "axway-vpc-prod"
  }
}*/
